# food_menu

./: pyproject.toml
mysite/food/: forms.py  models.py  urls.py  views.py
mysite/food/migrations/: 0001_initial.py  0002_item_item_image.py  0003_item_added_by.py  0004_alter_item_item_image.py
mysite/food/templates/food/: base.html  detail.html  index.html  item-form.html
mysite/mysite/: settings.py  urls.py
mysite/users/: models.py  views.py
mysite/users/migrations/: 0001_initial.py
mysite/users/templates/users/: login.html  profile.html  register.html
