[tool.poetry]
name = "food-menu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "food_menu"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
django = "^4.2.6"



[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
